--- a/src/app/(public)/page.module.css
+++ b/src/app/(public)/page.module.css
@@ -1,6 +1,5 @@
 .page {
-  width: min(1328px, 100%);
-  margin: 0 auto;
+  width: 100%;
   padding: 28px 0 64px;
 }
 
@@ -206,14 +205,14 @@
 }
 
 .statChart {
-  margin-top: 12px;
-  height: 44px;
+  margin-top: 10px;
+  height: 48px;
 }
 
 .sparkline {
   display: block;
   width: 100%;
-  height: 44px;
+  height: 48px;
 }
 
 .mainGrid {
@@ -619,7 +618,6 @@
 
 @media (max-width: 720px) {
   .page {
-    width: min(var(--page-width), calc(100% - 32px));
     padding-top: 24px;
   }
 
